@@ -2,7 +2,6 @@ package com.acme.tarifas.gestion.service;
 
 import com.acme.tarifas.gestion.clients.ViajesClient;
 import com.acme.tarifas.gestion.dao.TarifaCostoRepository;
-import com.acme.tarifas.gestion.dao.ViajeRepository;
 import com.acme.tarifas.gestion.dto.TelefonoDTO;
 import com.acme.tarifas.gestion.dto.TransportistaDTO;
 import com.acme.tarifas.gestion.dto.ZonaViajeDTO;
@@ -10,6 +9,7 @@ import com.acme.tarifas.gestion.entity.*;
 import com.acme.tarifas.gestion.dto.TipoVehiculoDTO;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.hibernate.Hibernate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,34 +18,30 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.Collections;
 
-//Refaccionar utilizando ViajesClient
-//Eliminar todo lo que sea para creación, modificacion y eliminación. Dejar solo visualizacion/filtrado
 @Service
 public class TransportistaService {
 
-    private final ViajeRepository viajeRepository;
     private final TarifaCostoRepository tarifaCostoRepository;
-
     private final ViajesClient viajesClient;
 
     @Autowired
-    public TransportistaService(ViajeRepository viajeRepository,
+    public TransportistaService(
             TarifaCostoRepository tarifaCostoRepository,
             ViajesClient viajesClient) {
-
-        this.viajeRepository = viajeRepository;
         this.tarifaCostoRepository = tarifaCostoRepository;
         this.viajesClient = viajesClient;
     }
 
+    @Transactional(readOnly = true)
     public List<TarifaCosto> findByTransportistaIdAndEsVigenteTrue(String transportistaId) {
         List<TarifaCosto> vigentes = tarifaCostoRepository.findByEsVigenteTrue();
 
         return vigentes.stream()
                 .filter(t -> t.getTransportistaId() != null &&
                         t.getTransportistaId().equals(transportistaId))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
@@ -70,7 +66,7 @@ public class TransportistaService {
         Set<ZonaViaje> zonasOperacion = tarifas.stream()
                 .map(TarifaCosto::getZonaViaje)
                 .filter(Objects::nonNull)
-                .filter(ZonaViaje::isActivo)
+                .filter(ZonaViaje::getActivo)
                 .collect(Collectors.toSet());
 
         TransportistaProfile profile = new TransportistaProfile(transportista, tiposVehiculo, zonasOperacion);
@@ -95,27 +91,39 @@ public class TransportistaService {
             this.id = transportista.getId();
             this.nombreComercial = transportista.getNombreComercial();
             this.cuit = transportista.getCuit();
-            this.contactoNombre = transportista.getContacto().getNombre();
-            this.contactoEmail = transportista.getContacto().getEmail();
-            this.contactoTelefono = transportista.getContacto().getTelefono();
+            if (transportista.getContacto() != null) {
+                this.contactoNombre = transportista.getContacto().getNombre();
+                this.contactoEmail = transportista.getContacto().getEmail();
+                this.contactoTelefono = transportista.getContacto().getTelefono();
+            } else {
+                this.contactoNombre = null;
+                this.contactoEmail = null;
+                this.contactoTelefono = null;
+            }
+
             this.tiposVehiculo = tiposVehiculo.stream()
                     .filter(Objects::nonNull)
-                    .map(tv -> {
-                        TipoVehiculoDTO dto = new TipoVehiculoDTO();
-                        dto.setId(tv.getId());
-                        dto.setNombre(tv.getNombre());
-                        dto.setDescripcion(tv.getDescripcion());
-                        dto.setDeletedAt(tv.getDeletedAt());
-                        dto.setLicenciaPermitida(tv.getLicenciaPermitida());
-                        return dto;
-                    })
                     .collect(Collectors.toList());
 
             this.zonasOperacion = zonas.stream()
                     .filter(Objects::nonNull)
-                    .map(ZonaViajeDTO::new)
+                    .map(zona -> {
+                        if (!Hibernate.isInitialized(zona.getProvincias())) {
+                            Hibernate.initialize(zona.getProvincias());
+                        }
+
+                        ZonaViajeDTO dto = new ZonaViajeDTO();
+                        dto.setId(zona.getId());
+                        dto.setNombre(zona.getNombre());
+                        dto.setDescripcion(zona.getDescripcion());
+                        dto.setActivo(zona.getActivo());
+                        Set<String> nombresProvincias = zona.getProvincias().stream()
+                                .map(Provincia::getNombre)
+                                .collect(Collectors.toSet());
+                        dto.setProvinciasNombres(nombresProvincias);
+                        return dto;
+                    })
                     .collect(Collectors.toList());
         }
     }
-
 }
